--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
               }
             ],
             "styles": [
-             "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+             "node_modules/bootstrap/dist/css/bootstrap.min.css"
+             
             ]
             ,
             "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
@@ -38,13 +38,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
+                  "maximumWarning": "800kB",
                   "maximumError": "1MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "maximumWarning": "800kB",
+                  "maximumError": "800kB"
                 }
               ],
               "outputHashing": "all"
