--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "teatro-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
+    "vercel-build": "npm install && npm run build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -21,11 +21,11 @@
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@angular/cli": "^18.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.2",
-    "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
